fix spacing between content and footer, adds twitter account

--- a/style.css
+++ b/style.css
@@ -3,25 +3,30 @@
 	padding: 0;
 }
 body{
-	font-family: 'Open Sans', sans-serif;
-	background-color: rgb(20, 1, 20);
+	font-family: 'Quicksand', sans-serif;
 	color: wheat;
+	background-color: rgb(20, 1, 20);
+	margin: 7%;
 }
 h1, h2, h3, h4, h5, h6, button, input{
-	font-family: 'Quicksand', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+}
+.header{
+	margin-bottom: 10vh;
 }
 
 h1{
 	display: inline-block;
-	margin-bottom: 10vh;
 	white-space: pre-line;
+	margin-block-start: 0;
+	margin-block-end: 0;
 }
 h1 span{
+	margin-top: -30rem;
 	white-space: nowrap;
-	}
+}
 h1 > span:first-of-type {
 	font-size: 9.5vw;
-	margin: 1vh 0;
 
 }
 h1 span+span{
@@ -39,16 +44,20 @@ h1 span+span{
 	margin: 10% 0;
 }
 footer{
+	margin-top: 10rem;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-evenly;
+}
+footer > div:first-of-type{
+	font-size: .825rem;
+	white-space: nowrap;
 }
 footer span{
 	margin: .125rem;
 }
-
-body {
-	margin: 7%;
+footer i{
+	font-style: normal;
 }
 .send, .main{
 	margin: 1% 0;
@@ -75,19 +84,40 @@ label{
 	color: rgb(20, 1, 20);
 	background: wheat;
 	border-color: chocolate;
+	border-style: solid;
 }
 
-/* Slider Styles */
-input[type=range]{
-	width: 100%;
-	margin-right: 1rem;
+.send{
+	color: rgb(20, 1, 20);
+	font-size: 1rem;
+	font-weight: 700;
+	background-color: wheat;
+	padding: .75rem 0;
+	border: none;
+	border-radius: .25rem;
+	box-shadow: .25rem .25rem rgba(210, 105, 30, 0.8);
 }
-input[type=range]::-ms-track{
-	width: 100%;
+.send:active{
+	box-shadow: .25rem .25rem rgba(210, 105, 30, 0.4);
 }
-input[type=range]::-webkit-slider-thumb{
-	width: 100%;
+
+.twitter{
+	color: chocolate;
+	font-weight: 700;
+	display: inline-block;
+	padding: .25rem .5rem;
 }
+.twitter:hover{
+	color: chocolate;
+	background-color: wheat;
+	box-shadow: .25rem .25rem chocolate;
+}
+.twitter:active{
+	box-shadow: .125rem .125rem chocolate;
+}
+
+/* Inputs and Values */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 /* Text Input Styles */
 input[type=number]{
@@ -109,18 +139,20 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-.send{
-	color: rgb(20, 1, 20);
-	font-size: 1rem;
-	font-weight: 700;
-	background-color: wheat;
-	padding: .75rem 0;
-	border: none;
-	border-radius: .25rem;
-	box-shadow: .125rem .125rem rgba(0,0,0, .2);	 
+
+/* Slider Styles */
+input[type=range]{
+	width: 100%;
+	margin-right: 1rem;
+}
+input[type=range]::-ms-track{
+	width: 100%;
+}
+input[type=range]::-webkit-slider-thumb{
+	width: 100%;
 }
 
-/* Range Normalization and Cross Browser */
+/* Slider Normalization and Cross Browser Equivalency*/
 input[type=range] {
   -webkit-appearance: none; 
   width: 100%; 
@@ -133,41 +165,41 @@ input[type=range]:focus {
   outline: none;
 }
 input[type=range]::-ms-track {
+  color: transparent;
   width: 100%;
-  cursor: pointer;
   background: transparent; 
   border-color: transparent;
-  color: transparent;
+  cursor: pointer;
 }
 input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
   height: .5rem;
-  cursor: pointer;
-  box-shadow: .125rem .125rem .25rem rgba(0,0,0, .2);
+  width: 100%;
   background: wheat;
-  border-radius: .25rem;
   border: .0625rem solid chocolate;
+  border-radius: .25rem;
+  box-shadow: .125rem .125rem .25rem rgba(0,0,0, .2);
+  cursor: pointer;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
   background: wheat;
 }
 input[type=range]::-moz-range-track {
-  width: 100%;
   height: .5rem;
-  cursor: pointer;
-  box-shadow: .125rem .125rem .25rem rgba(0,0,0, .2);
+  width: 100%;
   background: wheat;
-  border-radius: .25rem;
   border: .0625rem solid chocolate;
+  border-radius: .25rem;
+  box-shadow: .125rem .125rem .25rem rgba(0,0,0, .2);
+  cursor: pointer;
 }
 input[type=range]::-ms-track {
-  width: 100%;
+  color: transparent;
   height: .5rem;
-  cursor: pointer;
+  width: 100%;
   background: transparent;
   border-color: transparent;
   border-width: 1rem 0;
-  color: transparent;
+  cursor: pointer;
 }
 input[type=range]::-ms-fill-lower {
   background: wheat;
@@ -189,46 +221,55 @@ input[type=range]:focus::-ms-fill-upper {
 }
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  border: .125rem solid wheat;
   height: 2.25rem;
   width: 1rem;
-  border-radius: .25rem;
   background: chocolate;
-  cursor: pointer;
-  margin-top: -14px; 
+	margin-top: -1rem; 
+  border: .125rem solid wheat;
+  border-radius: .5rem;
   box-shadow: .25rem .25rem .5rem rgba(0,0,0, .2); 
+  cursor: pointer;
 }
 input[type=range]::-moz-range-thumb {
-  border: .125rem solid wheat;
   height: 2.25rem;
   width: 1rem;
-  border-radius: .25rem;
   background: chocolate;
+  border: .125rem solid wheat;
+  border-radius: .5rem;
+  box-shadow: .25rem .25rem .5rem rgba(0,0,0, .2); 
   cursor: pointer;
-  box-shadow: .25rem .25rem .5rem rgba(0,0,0, .2);
 }
 input[type=range]::-ms-thumb {
-  border: .125rem solid wheat;
   height: 2.25rem;
   width: 1rem;
-  border-radius: .25rem;
   background: chocolate;
+  border: .125rem solid wheat;
+  border-radius: .5rem;
+  box-shadow: .25rem .25rem .5rem rgba(0,0,0, .2); 
   cursor: pointer;
-  box-shadow: .25rem .25rem .5rem rgba(0,0,0, .2);
 }
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-/* Responsivity */
-@media (max-width: 1023px){
-	.send{
-		margin: 7% 0;
-	}
-}
+
+
+/* Responsivity/Media Queries */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+
+/* Menores que 375px */
 @media (max-width: 375px) {
 	label, .result{
 		font-size: .875rem;
 	}
+	footer > div:first-of-type{
+		font-size: .875rem;
+	}
+	footer > div:first-of-type i:first-of-type{
+		display: none;
+	}
 }
 
+/* Largura > Altura */
 @media (orientation: landscape){
 	body{
 		width: 50%;
@@ -236,13 +277,24 @@ input[type=range]::-ms-thumb {
 	}
 	h1 > span:first-of-type {
 		font-size: 5.75vw;
-		margin: 1vh 0;
 	}
 	h1 span+span{
 		font-size: 3.75vw;
 	}
+	footer span{
+		display: inline-block;
+	}
 }
-@media (min-width: 1024px){
+
+/*	Até 1023px  */
+@media (max-width: 1023px){
+	.send{
+		margin: 7% 0;
+	}
+}
+
+/* A partir de 1024px */
+@media (min-width: 1024px){ 
 	body{
 		width: 50%;
 		margin: 5% auto;
@@ -269,13 +321,9 @@ input[type=range]::-ms-thumb {
 	}
 	h1 > span:first-of-type {
 		font-size: 5vw;
-		margin: 1vh 0;
+
 	}
 	h1 span+span{
 		font-size: 3vw;
-	}
-	footer{
-		justify-content: space-evenly;
-		margin: 0 10%;
 	}
 }
